--- a/Gtk3ApplicationWindow/eg-gtk3-application-window.page
+++ b/Gtk3ApplicationWindow/eg-gtk3-application-window.page
@@ -10,7 +10,7 @@
 <title>GTK 3 Application Window Example</title>
 <p>
 The SML version of the C code for
-<link href="https://developer.gnome.org/gtk3/stable/gtk-getting-started.html#id-1.2.3.5">Example 0 from the GTK 3 reference manual</link>.
+<link href="https://developer-old.gnome.org/gtk3/stable/gtk-getting-started.html#id-1.2.3.5">Example 0 from the GTK 3 reference manual</link>.
 </p>
 
 <section>
