--- a/VteApp1/eg-vte-app1.page
+++ b/VteApp1/eg-vte-app1.page
@@ -9,7 +9,7 @@
 <title>VTE 2.90 Widget Example</title>
 <p>
 This example demonstrates use of
-the <link href="https://developer.gnome.org/vte/0.36/">VTE 2.90 widget</link> API
+the <link href="https://developer-old.gnome.org/vte/0.36/">VTE 2.90 widget</link> API
 in an application.
 </p>
 <note>
@@ -23,16 +23,16 @@ See <link xref="eg-vte-app2"/> for an example using API version 2.91.
 Also, this example demonstrates use of other GTK widgets:
 </p>
 <list style="compact">
-<item><p><link href="https://developer.gnome.org/gtk3/stable/GtkMessageDialog.html">message dialog</link></p></item>
-<item><p><link href="https://developer.gnome.org/gtk3/stable/GtkFontChooserDialog.html">font chooser dialog</link></p></item>
+<item><p><link href="https://developer-old.gnome.org/gtk3/stable/GtkMessageDialog.html">message dialog</link></p></item>
+<item><p><link href="https://developer-old.gnome.org/gtk3/stable/GtkFontChooserDialog.html">font chooser dialog</link></p></item>
 <item>
   <p>
-    <link href="https://developer.gnome.org/gtk3/stable/GtkButton.html">button</link>,
-    with a <link href="https://developer.gnome.org/gio/stable/GSimpleAction.html">simple action</link>
-    that is added to an <link href="https://developer.gnome.org/gio/stable/GActionMap.html">action map</link>
+    <link href="https://developer-old.gnome.org/gtk3/stable/GtkButton.html">button</link>,
+    with a <link href="https://developer-old.gnome.org/gio/stable/GSimpleAction.html">simple action</link>
+    that is added to an <link href="https://developer-old.gnome.org/gio/stable/GActionMap.html">action map</link>
   </p>
 </item>
-<item><p><link href="https://developer.gnome.org/gtk3/stable/GtkSpinButton.html">spin button</link></p></item>
+<item><p><link href="https://developer-old.gnome.org/gtk3/stable/GtkSpinButton.html">spin button</link></p></item>
 </list>
 
 <section>
