--- a/Gtk3CustomDrawing/eg-gtk3-custom-drawing.page
+++ b/Gtk3CustomDrawing/eg-gtk3-custom-drawing.page
@@ -36,12 +36,12 @@ See <link xref="eg-using-make"/> for build instructions.
 <title>File listings</title>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
   <title><file>example-4.sml</file></title>
-  <code>
+  <code type="sml">
 <include parse="text" href="example-4.sml" xmlns="http://www.w3.org/2001/XInclude"/></code>
 </listing>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
   <title><file>mlton-main.sml</file></title>
-  <code>
+  <code type="sml">
 <include parse="text" href="mlton-main.sml" xmlns="http://www.w3.org/2001/XInclude"/></code>
 </listing>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
@@ -51,17 +51,17 @@ See <link xref="eg-using-make"/> for build instructions.
 </listing>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
   <title><file>polyml-libs.sml</file></title>
-  <code>
+  <code type="sml">
 <include parse="text" href="polyml-libs.sml" xmlns="http://www.w3.org/2001/XInclude"/></code>
 </listing>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
   <title><file>polyml-app.sml</file></title>
-  <code>
+  <code type="sml">
 <include parse="text" href="polyml-app.sml" xmlns="http://www.w3.org/2001/XInclude"/></code>
 </listing>
 <listing xmlns:ui="http://projectmallard.org/ui/1.0/" ui:expanded="false">
   <title><file>app.mk</file></title>
-  <code>
+  <code type="makefile">
 <include parse="text" href="app.mk" xmlns="http://www.w3.org/2001/XInclude"/></code>
 </listing>
 </section>
